# mit-grandhack

./: .easignore  .gitignore  ARCHITECTURE.md  README.md  app.json  docker-compose.yml  eas.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: _layout.tsx  ai-assistant.tsx  doctor-call.tsx  home.tsx  index.tsx  outbreak.tsx  telemedicine.tsx
app/(tabs)/: _layout.tsx  ai-chat.tsx  dashboard.tsx  doctor-chat.tsx  home.tsx  new-visit.tsx  profile.tsx
app/api/: chat+api.ts
app/patients/: add.tsx  detail.tsx  index.tsx
app/screening/: index.tsx  results.tsx
docs/plans/: 2026-03-14-emr-ocr-design.md  2026-03-14-screening-insights-design.md
model/: disease-classification-by-cnn-using-mfcc.ipynb
server/: .dockerignore  .env.example  Dockerfile  audio.py  auth.py  database.py  init.sql  iris_client.py  lung_cnn.tflite  main.py  models.py  pyproject.toml  schemas.py
server/core/: security.py
server/models/: __init__.py
server/routers/: ai.py  auth.py  communications.py  fhir.py  patients.py
server/schemas/: __init__.py
src/components/: Button.tsx  Card.tsx  GlassSurface.tsx  Header.tsx  InputField.tsx  OfflineBanner.tsx  RiskBadge.tsx  StatCard.tsx  index.ts
src/config/: api.ts
src/i18n/: en.ts  hi.ts
src/providers/: AiProvider.tsx  AppProvider.tsx  AuthProvider.tsx  DoctorCommProvider.tsx  NetworkProvider.tsx  OutbreakProvider.tsx  PatientProvider.tsx  SppProvider.tsx
src/services/: aiService.ts  openaiService.ts  patientApi.ts
src/stores/: index.ts  useAiStore.ts  useAuthStore.ts  useBleStore.ts  useOutbreakStore.ts  (+1 more)
(+16 files in other folders)
